--- a/css/styles.css
+++ b/css/styles.css
@@ -57,15 +57,15 @@ address{
 }
 .modal{
     position: absolute;
-    top: 50%;
-    left: 50%;
     display: flex;
     flex-direction: column;
-    width: 408px;
-    min-height: 584px;
     border-radius: 4px;
     background-color: #FCFCFC;
     margin-top: 80px;
+    width: 408px;
+    min-height: 584px;
+    top: 50%;
+    left: 50%;
     box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -161,6 +161,8 @@ color: #8E8F99;
     stroke-width: 1px;
     top: 24px;
     right: 24px;
+    height: 24px;
+    width: 24px;
     align-items: center;
     justify-content: center;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -899,6 +901,7 @@ padding-bottom: 120px;
 button .footer-button-icon{
     position: absolute;
     fill: #FFFFFF;
+    margin-left: 16px;
     
 }
 .subscribe-button:hover{
