--- a/css/styles.css
+++ b/css/styles.css
@@ -69,14 +69,12 @@ address{
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-paragraph{
-padding-top: 24px;
 font-weight: 500;
 font-size: 16px;
 line-height: 150%;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2E2F42;
-    margin-bottom: 16px;
 }
 
 
@@ -171,16 +169,16 @@ color: #8E8F99;
 }
 .modal-exit-link:focus,
 .modal-exit-link:hover{
-    background-color: #ffff;
+    background-color: #404BBF;
     border: none;
 }
 .modal-exit-button{
     fill:#2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-exit-button:focus,
-.modal-exit-button:hover{
-    fill: #FFFFFF;
+.modal-exit-link:focus .modal-exit-button,
+.modal-exit-link:hover .modal-exit-button {
+    fill: #ffffff;
 }
 .modal-exit-container{
     display: flex;
@@ -201,7 +199,6 @@ color: #8E8F99;
 }
 
 .modal-container {
-    display: flex;
     padding: 72px 24px 24px 24px;
     justify-content: center;
     align-items: center;
