--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,6 @@ address{
 }
 .modal{
     position: absolute;
-    display: flex;
     flex-direction: column;
     border-radius: 4px;
     background-color: #FCFCFC;
@@ -75,12 +74,9 @@ line-height: 150%;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2E2F42;
+margin-bottom: 16px
 }
 
-
-.modal-container-input:focus {
-    border-color: rgb(77, 90, 229);
-}
 
 .modal-container-comment {
     width: 360px;
@@ -98,6 +94,8 @@ color: #2E2F42;
     width: 360px ;
     height: 336px ;
     margin-bottom: 8px;
+    line-height: 1.17;
+    display: block;
 }
 .modal-text{
 
@@ -205,12 +203,14 @@ color: #8E8F99;
 .modal-container-input {
     border: 1px solid;
     border-color: rgb(46, 47, 66, 0.4);
-    width: 360px;
+    width: 100%;
     height: 40px;
     border-radius: 4px;
     padding-left: 38px;
     margin-bottom: 8px;
     margin-top: 0;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-container-input:hover{
     
@@ -223,12 +223,21 @@ input:focus .modal-input-icon{
     outline: none;
     box-shadow: none;
 }
+.modal-input-icon-wrapper{
+    position: relative;
+}
 .modal-top-paragraph{
 }
 .modal{
     padding: 72px 24px 24px 24px;
     justify-content: center;
     align-items: center;
+}
+.modal-wrapper-container{
+    margin-bottom: 8px;
+}
+.modal-container-input:focus {
+    border-color: #4D5AE5;
 }
 /* header */
 nav{
