--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ line-height: 150%;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2E2F42;
-margin-bottom: 16px
+margin-bottom: 16px;
 }
 
 
