--- a/css/styles.css
+++ b/css/styles.css
@@ -79,16 +79,25 @@ margin-bottom: 16px;
 
 
 .modal-container-comment {
-    width: 360px;
     height: 120px;
     border-radius: 4px;
     margin-bottom: 16px;
-    padding-left: 16px;
-    padding-top: 8px;
-    padding-right: 16px;
-    padding-bottom: 8px
+    padding: 8px 16px; 
+    width: 100%;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.modal-container-comment:focus{
+border-color: #4D5AE5;
+}
 .modal-container-item {
     display: block;
 }
