--- a/css/styles.css
+++ b/css/styles.css
@@ -117,13 +117,24 @@ border-color: #4D5AE5;
     color: #8E8F99;
     margin-bottom: 4px;
 }
-.policy-link{
-    text-decoration: underline;
-    color: #4D5AE5;
+.check{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .checkbox-label{
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     margin-bottom: 24px;
     gap: 8px;
+    color: #8e8f99;
 }
 .checkbox-label{
     display: flex;
@@ -138,9 +149,9 @@ letter-spacing: 0.04em;
 color: #8E8F99;
 }
 .modal-button-container{
-    display: flex;
     height: 104px;
     width: 408;
+    margin-bottom: 24px;
 }
 .modal-button{
     border: none;
@@ -395,6 +406,14 @@ font-family: "Raleway", sans-serif;
     width: 100%;
     bottom: -1px;
 }
+input[type="checkbox"]:checked{
+    background-color:#404bbf;
+    border: none;
+    fill: #F4F4FD;
+}
+.policy-link{
+    color:#4d5ae5;
+}
 
 /* Hero section 1 */
 .hero .container{
@@ -476,7 +495,17 @@ justify-content: center;
 
 }
 .visually-hidden {
-
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .benefits {
