--- a/css/styles.css
+++ b/css/styles.css
@@ -154,16 +154,24 @@ color: #8E8F99;
     margin-bottom: 24px;
 }
 .modal-button{
+    font-family: "Roboto", sans-serif;
+    display: block;
     border: none;
     border-radius: 4px;
     padding: 16px 32px;
-    width: 169px;
+    min-width: 169px;
     height: 56px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
     background-color: #4D5AE5;
     color: #FFFFFF;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     margin-left: auto;
     margin-right: auto;
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-button:hover{
     background-color: #404BBF;
