--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,6 @@ border-color: #4D5AE5;
     margin-bottom: 4px;
 }
 .check{
-    display: inline-flex;
     align-items: center;
     justify-content: center;
     fill: transparent;
@@ -126,6 +125,7 @@ border-color: #4D5AE5;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
 }
 .checkbox-label{
     font-size: 12px;
@@ -148,6 +148,7 @@ letter-spacing: 0.04em;
 color: #8E8F99;
 }
 .modal-button-container{
+    margin-bottom: 24px;
 }
 .modal-button{
     font-family: "Roboto", sans-serif;
@@ -167,7 +168,7 @@ color: #8E8F99;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     margin-left: auto;
     margin-right: auto;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-button:hover{
     background-color: #404BBF;
@@ -415,7 +416,7 @@ font-family: "Raleway", sans-serif;
 }
 .visually-hidden:checked + .checkbox-label .modal-checked-button{
     background-color:#404bbf;
-    fill: #FFFFFF;
+    fill: #F4F4FD;
     border: none;
 }
 .policy-link{
