--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ address{
     min-height: 584px;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
     box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -101,10 +102,7 @@ border-color: #4D5AE5;
     display: block;
 }
 .feedback-form{
-    width: 360px ;
-    height: 336px ;
-    margin-bottom: 8px;
-    line-height: 1.17;
+
 }
 .modal-text{
 
