--- a/css/styles.css
+++ b/css/styles.css
@@ -115,16 +115,16 @@ border-color: #4D5AE5;
     margin-bottom: 4px;
     line-height: 1.17;
 }
-.check{
+.modal-button-container .check{
     align-items: center;
     justify-content: center;
-    fill: transparent;
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: inline-flex;
+    fill: transparent;
 }
 .checkbox-label{
     font-size: 12px;
