--- a/css/styles.css
+++ b/css/styles.css
@@ -427,6 +427,18 @@ font-family: "Raleway", sans-serif;
     line-height: 133%;
     text-decoration-skip-ink: none;
 }
+.checkbox{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 
 /* Hero section 1 */
 .hero .container{
@@ -514,7 +526,6 @@ justify-content: center;
   margin: -1px;
   border: 0;
   padding: 0;
-  
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
