--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,7 @@ border-color: #4D5AE5;
     margin-bottom: 24px;
     gap: 8px;
     color: #8e8f99;
+    font-weight: 400;
 }
 .checkbox-label{
     align-items: center; 
@@ -211,7 +212,7 @@ color: #8E8F99;
 
 .modal-input-icon{
     position: absolute;
-    fill: #888;
+    fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     left: 16px;
     top: 50%;
