--- a/css/styles.css
+++ b/css/styles.css
@@ -980,3 +980,21 @@ button .footer-button-icon{
     display: flex;
     gap: 24px;
 }
+
+.checkbox:checked + .checkbox-label .check-span {
+    background-color:#404bbf;
+    fill: #F4F4FD;
+    border: none;
+}
+
+.modal-button-container .check-span{
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    fill: transparent;
+}
